Fix scrollbars

--- a/css/phone.css
+++ b/css/phone.css
@@ -39,6 +39,10 @@
 
 @media screen and (max-width: 1025px) {
 
+	html, body {
+	    overflow-x: hidden; /* Put scrollbars behind fixed elements */
+	}
+
 	.topImage {
 		height: 170px;
 		margin-bottom: 35px;
